--- a/xss/production/test/3js_transform.html
+++ b/xss/production/test/3js_transform.html
@@ -23,17 +23,18 @@
 <script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript">		
 	var renderer = new THREE.CanvasRenderer();	
+var ui;
 var active_camera;
 var g_elapsed = -1;
-var g_delta = 0.0;			
+var g_delta = 0.0;	
+var drawingCanvas = renderer.domElement;
 var application = {};
 // --------RESOURCES---------
 // --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
 document.body.appendChild( soundRenderer.domElement );
-renderer.setSize( window.innerWidth, window.innerHeight );
+renderer.setSize( window.innerWidth,window.innerHeight );
 function render() {
-renderer.clear();
 var now   = new Date().getTime();
 if (g_elapsed < 0)
     g_delta = 0; //first update
@@ -139,12 +140,12 @@ cylinder_1.rotation.z = cylinder_1.rotation.z + 0.0199999996;
 	document.addEventListener( 'keydown', keydown_application, false );
 	function keydown_application (event)
 	{   
-	var key_code = event.keyCode;
-			if (key_code == SHIFT)
+	var keycode = event.keyCode;
+			if (keycode == SHIFT)
 {
 application.is_shift_down = true;
 }
-if (key_code == CTRL)
+if (keycode == CTRL)
 {
 application.is_ctrl_down = true;
 }
@@ -152,16 +153,22 @@ application.is_ctrl_down = true;
 	document.addEventListener( 'keyup', keyup_application, false );
 	function keyup_application (event)
 	{   
-	var key_code = event.keyCode;
-			if (key_code == SHIFT)
+	var keycode = event.keyCode;
+			if (keycode == SHIFT)
 {
 application.is_shift_down = false;
 }
-if (key_code == CTRL)
+if (keycode == CTRL)
 {
 application.is_ctrl_down = false;
 }
 	}
+if(ui)
+{
+	ui.load_resources(function(){		
+		g_ui.fill_background = false;
+	});
+}
 if (application.init)
 {
 	application.init();
@@ -169,8 +176,12 @@ if (application.init)
 document.body.appendChild( renderer.domElement );
 animate();
 function animate() {
+	if(ui)
+		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
 	requestAnimationFrame( animate );
 	render();
+	if(ui)
+		ui.draw(drawingCanvas.getContext('2d'));
 }
 </script>
 </body>
