--- a/xss/production/test/ms3.html
+++ b/xss/production/test/ms3.html
@@ -9,13 +9,25 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
-<script type="text/javascript">			
+<script type="text/javascript">	
+var drawingCanvas;		
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+		if(drawingCanvas){
+			var client =
+			{
+				width: 600,
+				height: 400,
+				canvas: drawingCanvas
+			};
+			var ui = new ms.ui.Manager(client, streamer);
+			var g_ui = ui;
+			var g_ui_root = ui.root;
+		}
 function start(resolution)  
 {  
 	var start = new Date().getTime();  
@@ -36,8 +48,9 @@ function start(resolution)
                 application.increment = 10
 window.onload = function() 
 {
-	var drawingCanvas = document.getElementById("myCanvas");
-	g_canvas = drawingCanvas;
+	var Sound = new ms.ui.Sound();
+	drawingCanvas = document.getElementById("myCanvas");
+    g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
 	{
 		var client =
@@ -46,31 +59,25 @@ window.onload = function()
 			height: 400,
 			canvas: drawingCanvas
 		};
-		var streamer = new ms.streamer.Streamer();
 		var ui = new ms.ui.Manager(client, streamer);
-		var resources = new ms.streamer.PackageContainer();
 		g_ui = ui;
         g_ui_root = ui.root;
-        var ui_images = 
-        [
-				    'images/img1.png',
-        ];
-		ui.load_images(ui_images, function()
+     	ui.load_resources(function()
 		{
-			drawingCanvas.onmousemove = function(ev)
-			{
-				ui.mouse_move(ev.clientX, ev.clientY);                  
-			};
-			drawingCanvas.onmousedown = function(ev)
-			{
-				ui.mouse_down(ev.clientX, ev.clientY);                  
-			};
-			drawingCanvas.onmouseup = function(ev)
-			{
-				ui.mouse_up(ev.clientX, ev.clientY);                  
-			};
-		    img1 = g_ui_root.newImage(
-	    "images/img1.png");
+	drawingCanvas.onmousemove = function(ev)
+	{
+		ui.mousemove(ev.clientX, ev.clientY);                  
+	};
+	drawingCanvas.onmousedown = function(ev)
+	{
+		ui.mousedown(ev.clientX, ev.clientY);                  
+	};
+	drawingCanvas.onmouseup = function(ev)
+	{
+		ui.mouseup(ev.clientX, ev.clientY);                  
+	};	
+		    img1 = new ms.ui.Image( 
+	    "images/img1.png",g_ui_root.manager, g_ui_root);
                 img1.src("images/img1.png")
                 img1.set_height(50)
 	img1.click = function()
@@ -79,6 +86,18 @@ window.onload = function()
 img1.set_height(img1.get_height() + application.increment);
 	};
                 img1.rect(100, 100, 50, 50);
+			document.onkeydown = function(ev)
+			{
+				ui.keydown(ev.keyCode);                  
+			};
+			document.onkeyup = function(ev)
+			{
+				ui.keyup(ev.keyCode);                  
+			};
+			document.onkeypress = function(ev)
+			{
+				ui.keypress(ev.keyCode);                  
+			};
             if (application.init)
             {
                 application.init();
@@ -94,5 +113,8 @@ img1.set_height(img1.get_height() + application.increment);
 	<canvas id="myCanvas" width="600" height="400">
 		<p>Your browser doesn't support canvas.</p>
 	</canvas>
+	<audio id="sounds" preload> 
+	Your browser does not support the audio element.
+	</audio>
 </body>
 </html>
