--- a/xss/production/test/transform.html
+++ b/xss/production/test/transform.html
@@ -23,19 +23,18 @@
 <script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript">		
 	var renderer = new THREE.CanvasRenderer();	
+var ui;
 var active_camera;
-var SCREEN_WIDTH = window.innerWidth;
-var SCREEN_HEIGHT = window.innerHeight;
 var g_elapsed = -1;
-var g_delta = 0.0;			
+var g_delta = 0.0;	
+var drawingCanvas = renderer.domElement;
 var application = {};
 // --------RESOURCES---------
 // --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
 document.body.appendChild( soundRenderer.domElement );
-renderer.setSize( window.innerWidth, window.innerHeight );
+renderer.setSize( window.innerWidth,window.innerHeight );
 function render() {
-renderer.clear();
 var now   = new Date().getTime();
 if (g_elapsed < 0)
     g_delta = 0; //first update
@@ -141,7 +140,7 @@ cylinder_1.rotation.z = cylinder_1.rotation.z + 0.0199999996;
 	document.addEventListener( 'keydown', keydown_application, false );
 	function keydown_application (event)
 	{   
-	var key_code = event.keyCode;
+	var keycode = event.keyCode;
 			if (key_code == 16)
 {
 application.is_shift_down = true;
@@ -154,7 +153,7 @@ application.is_ctrl_down = true;
 	document.addEventListener( 'keyup', keyup_application, false );
 	function keyup_application (event)
 	{   
-	var key_code = event.keyCode;
+	var keycode = event.keyCode;
 			if (key_code == 16)
 {
 application.is_shift_down = false;
@@ -164,6 +163,12 @@ if (key_code == 17)
 application.is_ctrl_down = false;
 }
 	}
+if(ui)
+{
+	ui.load_resources(function(){		
+		g_ui.fill_background = false;
+	});
+}
 if (application.init)
 {
 	application.init();
@@ -171,8 +176,12 @@ if (application.init)
 document.body.appendChild( renderer.domElement );
 animate();
 function animate() {
+	if(ui)
+		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
 	requestAnimationFrame( animate );
 	render();
+	if(ui)
+		ui.draw(drawingCanvas.getContext('2d'));
 }
 </script>
 </body>
